OPA/constraintTemplate.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sallowedrepos
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedRepos
      validation:
        openAPIV3Schema:
          type: object
          properties:
            repos:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedrepos

        violation[{"msg": msg}] {
          container := input.review.object.spec.template.spec.containers[_]
          not image_from_allowed_repo(container.image)
          msg := sprintf("Container %v uses image %v from unauthorized registry", [container.name, container.image])
        }

        image_from_allowed_repo(image) {
          repo := input.parameters.repos[_]
          startswith(image, repo)
        }
---
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sallowedtags
spec:
  crd:
    spec:
      names:
        kind: k8sallowedtags
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedtags

        violation[{"msg": msg}] {
          container := input.review.object.spec.template.spec.containers[_]
          image_from_unallowed_tags(container.image)
          msg := sprintf("Container %v uses image %v with unauthorized tag", [container.name, container.image])
        }

        image_from_unallowed_tags(image) {
          endswith(image, "latest")
        }
